--- a/_includes/teamv.html
+++ b/_includes/teamv.html
@@ -1,4 +1,6 @@
-<section class="teamv" id="team">
+<section id="team">
+
+    <div class="teamv">
 
         <div class="teamvcont">
             <h2>OUR TEAM</h2>
@@ -112,5 +114,5 @@
             
 
         </div>
-
+    </div>
 </section>
