background: url('../img/worldteam.gif');

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -516,7 +516,7 @@ body {
 /*TEAM VERSION CSS*/
 
 .teanv {
-    background-image: url('../img/worldteam.gif');
+    background: url('../img/worldteam.gif');
     width:100%;
 	display:flex;
 	flex-wrap:wrap;
