--- a/_includes/teamv.html
+++ b/_includes/teamv.html
@@ -1,7 +1,6 @@
-<section id="team">
+<section class="teamv" id="team">
 
-    <div class="teamv">
-
+    <div class="hiddenteamimg">
         <div class="teamvcont">
             <h2>OUR TEAM</h2>
             <div class="teampeople">
