--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -507,17 +507,26 @@ body {
 }
 /*TEAM*/
 
-#team { 
-    width: 100%;
-    height: 700px;
+#team {
+    width:100%;
+    height: 800px;
     overflow: hidden;
 }
 
+.hiddenteamimg {
+    background-image: url('../img/worldteam.gif');
+    position: relative;
+    width: 100%;
+    height: 700px;
+    min-height: auto;
+    @include background-cover;
+    background-position: center;
+    text-align: center;
+    color: white;
+}
 /*TEAM VERSION CSS*/
 
 .teanv {
-    background: url('../img/worldteam.gif');
-    width:100%;
 	display:flex;
 	flex-wrap:wrap;
 	flex-direction:column;
@@ -532,6 +541,7 @@ body {
 	height:100%;
 	justify-content:center;
 	align-items:center;
+
 }
 
 .teamvcont h2 {
