--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -509,7 +509,7 @@ body {
 
 #team {
     width:100%;
-    height: 800px;
+    height: 700px;
     overflow: hidden;
 }
 
@@ -541,7 +541,7 @@ body {
 	height:100%;
 	justify-content:center;
 	align-items:center;
-
+    margin:0.5em;
 }
 
 .teamvcont h2 {
