--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -517,7 +517,7 @@ body {
     background-image: url('../img/worldteam.gif');
     position: relative;
     width: 100%;
-    height: 700px;
+    height: 750px;
     min-height: auto;
     @include background-cover;
     background-position: center;
@@ -541,7 +541,7 @@ body {
 	height:100%;
 	justify-content:center;
 	align-items:center;
-    margin:0.5em;
+    margin-top:1em;
 }
 
 .teamvcont h2 {
