--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -372,6 +372,8 @@ body {
 
 .headerv p {
     width:90%;
+    font-size: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .headerv h1 {
