--- a/_includes/airdrop.html
+++ b/_includes/airdrop.html
@@ -1,41 +1,46 @@
 <section id="airdrop">
-
-    <div class="airdroptxt">
-        <div class="airdroptxtitle">
-      <h2>AIRDROP</h2></br></br>
-      <p>We will be distributing</p> 
-      <h2>20,000,000 Electhrons</h2>
-        </div>
-        <div class="airdroptext">
-      <p>among all the members of our community. Anyone can participate, anyone can win. You just have to follow the instructions to accumulate more and more Electhrons in your account, earn creature NFTs, utility NFTs or properties in our metaverse.</p>
-        </div>
-    </div>
-  
+  <div class="airdropcontent">
+     <div class="airdroptxt">
+         <div class="airdroptxtitle">
+       <h2>AIRDROP</h2>
+       <p>We will be distributing</p> 
+       <h2>20.000.000 Electhrons</h2>
+         </div>
+         <div class="airdroptext">
+       <p>among all the members of our community. Anyone can participate, anyone can win. You just have to follow the instructions to accumulate more and more Electhrons in your account, earn creature NFTs, utility NFTs or properties in our metaverse.</p>
+         </div>
+     </div>
+   
+ <!-- botones -->
+ 
     <div class="airdropbottoms">
-      <div class="howtoparticipate">
-        <div class="titlehowto">HOW TO PARTICIPATE</div>
-          <div class="howtobottoms">
-  <a href="#" class="btn btn-default btn-xl wow tada">How to participate</a>
-  <a href="#" class="btn btn-default btn-xl wow tada">Check Electhrons</a>
-  <a href="#" class="btn btn-default btn-xl wow tada">Telegram Bot</a>
-  <a href="#" class="btn btn-default btn-xl wow tada">Review airdrops.io</a>
-          </div>
-      </div>
-      <div class="howtoparticipate">
-        <div class="titlehowto">HOW TO GET YOUR FREE NFT</div>
-        <div class="howtobottoms">
-  <a href="#" class="btn btn-default btn-xl wow tada">Smart contract</a>
-  <a href="#" class="btn btn-default btn-xl wow tada">Mint NFT for free</a>
-  <a href="#" class="btn btn-default btn-xl wow tada">Check on OPENSEA</a>
-          </div>
-      </div>
-      <div class="howtoparticipate">
-        <div class="titlehowto">HOW TO GET MORE NFTs</div>
-        <div class="howtobottoms">
-  <a href="#" class="btn btn-default btn-xl wow tada">Smart contract</a>
-  <a href="#" class="btn btn-default btn-xl wow tada">Mint more NFT</a>
-  <a href="#" class="btn btn-default btn-xl wow tada">Check on OPENSEA</a>
-          </div>
-      </div>
-    </div>
-  </section>
+       <div class="howtoparticipate">
+         <h2>HOW TO PARTICIPATE</h2>
+           <div class="howtobottoms">
+   <a href="#" class="btn btn-default btn-xl wow tada">How to participate</a>
+   <a href="#" class="btn btn-default btn-xl wow tada">Check Electhrons</a>
+   <a href="#" class="btn btn-default btn-xl wow tada">Telegram Bot</a>
+   <a href="#" class="btn btn-default btn-xl wow tada">Review airdrops.io</a>
+           </div>
+       </div>
+   <hr class="light">
+       <div class="howtoparticipate">
+         <h2>HOW TO GET YOUR FREE NFT</h2>
+         <div class="howtobottoms">
+   <a href="#" class="btn btn-default btn-xl wow tada">Smart contract</a>
+   <a href="#" class="btn btn-default btn-xl wow tada">Mint NFT for free</a>
+   <a href="#" class="btn btn-default btn-xl wow tada">Check on OPENSEA</a>
+           </div>
+       </div>
+   <hr class="light">
+       <div class="howtoparticipate">
+         <h2>HOW TO GET MORE NFTs</h2>
+         <div class="howtobottoms">
+   <a href="#" class="btn btn-default btn-xl wow tada">Smart contract</a>
+   <a href="#" class="btn btn-default btn-xl wow tada">Mint more NFT</a>
+   <a href="#" class="btn btn-default btn-xl wow tada">Check on OPENSEA</a>
+           </div>
+       </div>
+     </div>
+ 
+ </section>
