cambio color letras

--- a/_includes/airdrop.html
+++ b/_includes/airdrop.html
@@ -17,28 +17,28 @@
        <div class="howtoparticipate">
          <h2>HOW TO PARTICIPATE</h2>
            <div class="howtobottoms">
-   <a href="#" class="btn btn-default btn-xl wow tada">How to participate</a>
-   <a href="#" class="btn btn-default btn-xl wow tada">Check Electhrons</a>
-   <a href="#" class="btn btn-default btn-xl wow tada">Telegram Bot</a>
-   <a href="#" class="btn btn-default btn-xl wow tada">Review airdrops.io</a>
+   <a href="#" class="btn btn-default btn-xl wow tada air">How to participate</a>
+   <a href="#" class="btn btn-default btn-xl wow tada air">Check Electhrons</a>
+   <a href="#" class="btn btn-default btn-xl wow tada air">Telegram Bot</a>
+   <a href="#" class="btn btn-default btn-xl wow tada air">Review airdrops.io</a>
            </div>
        </div>
    <hr class="light">
        <div class="howtoparticipate">
          <h2>HOW TO GET YOUR FREE NFT</h2>
          <div class="howtobottoms">
-   <a href="#" class="btn btn-default btn-xl wow tada">Smart contract</a>
-   <a href="#" class="btn btn-default btn-xl wow tada">Mint NFT for free</a>
-   <a href="#" class="btn btn-default btn-xl wow tada">Check on OPENSEA</a>
+   <a href="#" class="btn btn-default btn-xl wow tada air">Smart contract</a>
+   <a href="#" class="btn btn-default btn-xl wow tada air">Mint NFT for free</a>
+   <a href="#" class="btn btn-default btn-xl wow tada air">Check on OPENSEA</a>
            </div>
        </div>
    <hr class="light">
        <div class="howtoparticipate">
          <h2>HOW TO GET MORE NFTs</h2>
          <div class="howtobottoms">
-   <a href="#" class="btn btn-default btn-xl wow tada">Smart contract</a>
-   <a href="#" class="btn btn-default btn-xl wow tada">Mint more NFT</a>
-   <a href="#" class="btn btn-default btn-xl wow tada">Check on OPENSEA</a>
+   <a href="#" class="btn btn-default btn-xl wow tada air">Smart contract</a>
+   <a href="#" class="btn btn-default btn-xl wow tada air">Mint more NFT</a>
+   <a href="#" class="btn btn-default btn-xl wow tada air">Check on OPENSEA</a>
            </div>
        </div>
      </div>
