--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -395,6 +395,12 @@ body {
     margin:0.5em;
 }
 
+/*CALL TO ACTION*/
+
+.call {
+    text-align:justify;
+}
+
 /*SERVICE*/
 #descentralization {
 	display:flex;
