--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -489,7 +489,11 @@ body {
 
 .airdroptext {
 	text-align:justify;
-	width:100%;
+	width:60%;
+}
+
+.airdroptext p {
+    width:100%;
 }
 
     /*BOTONES AIRDROP*/
