--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -524,6 +524,7 @@ body {
 	padding:0;
 	margin:0 0 10px 0;
 	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    width:100%;
 }
 
 .howtobottoms {
