--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -525,7 +525,10 @@ body {
 	margin:0 0 10px 0;
 	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     width:100%;
-    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .howtobottoms {
