--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,77 +1,123 @@
 <section id="team">
-    <div class="imgteamsection">
-
-        <div class="teamsectiontitle">
-            <h3>OUR TEAM</h3>
-        </div>
-
-        <div class="conteamers">
-            <div class="teamers">
-                <img src="../img/team/Moe.png">
-                <h4>NOMBRE</h4>
-                <h5>CARGO</h5>
-            </div>
-            <div class="teamers">
-                <img src="../img/team/Moe.png">
-                <h4>NOMBRE</h4>
-                <h5>CARGO</h5>
-            </div>
-            <div class="teamers">
-                <img src="../img/team/Moe.png">
-                <h4>NOMBRE</h4>
-                <h5>CARGO</h5>
-            </div>
-            <div class="teamers">
-                <img src="../img/team/Moe.png">
-                <h4>NOMBRE</h4>
-                <h5>CARGO</h5>
-            </div>
-        </div>
-
-        <div class="conteamers">
-            <div class="teamers">
-                <img src="../img/team/Moe.png">
-                <h4>NOMBRE</h4>
-                <h5>CARGO</h5>
-            </div>
-            <div class="teamers">
-                <img src="../img/team/Moe.png">
-                <h4>NOMBRE</h4>
-                <h5>CARGO</h5>
-            </div>
-            <div class="teamers">
-                <img src="../img/team/Moe.png">
-                <h4>NOMBRE</h4>
-                <h5>CARGO</h5>
-            </div>
-            <div class="teamers">
-                <img src="../img/team/Moe.png">
-                <h4>NOMBRE</h4>
-                <h5>CARGO</h5>
-            </div>
-        </div>
-
-        <div class="conteamers">
-            <div class="teamers">
-                <img src="../img/team/Moe.png">
-                <h4>NOMBRE</h4>
-                <h5>CARGO</h5>
-            </div>
-            <div class="teamers">
-                <img src="../img/team/Moe.png">
-                <h4>NOMBRE</h4>
-                <h5>CARGO</h5>
-            </div>
-            <div class="teamers">
-                <img src="../img/team/Moe.png">
-                <h4>NOMBRE</h4>
-                <h5>CARGO</h5>
-            </div>
-            <div class="teamers">
-                <img src="../img/team/Moe.png">
-                <h4>NOMBRE</h4>
-                <h5>CARGO</h5>
-            </div>
-        </div>
+    <div class="contteam">
+         <h2>OUR TEAM<h2>
+         
+         <div class="peoplegroup">
+ <!--GRUPO 1-->	
+             <div class="peoplex4">
+         
+                 <div class="peoplex1">
+                 <img src="./img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="./img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="./img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="./img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+             </div>
+ <!--GRUPO 2-->				
+             <div class="peoplex4">
+         
+                 <div class="peoplex1">
+                 <img src="./img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="./img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="./img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="./img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+             </div>
+ <!--GRUPO 3-->	
+             <div class="peoplex4">
+         
+                 <div class="peoplex1">
+                 <img src="./img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="./img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="./img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="./img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+             </div>
+ <!--GRUPO 4-->	
+             <div class="peoplex4">
+         
+                 <div class="peoplex1">
+                 <img src="./img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="./img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="./img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="./img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+             </div>
+         
+         </div>
+    
     </div>
-</section>
+ </section>
+ 
