--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -542,122 +542,54 @@ body {
 /*TEAM*/
 
 #team {
-    width:100%;
-    overflow: hidden;
+	background:grey;
+	background-image:url ("*")
 }
 
-.hiddenteamimg {
-    background-image: url('../img/worldteam.gif');
-        width: 100%;
-    min-height: auto;
-    @include background-cover;
-    background-position: center;
-    text-align: center;
-    color: white;
-}
-/*TEAM VERSION CSS*/
-
-.teanv {
+.contteam,
+.peoplegroup {
 	display:flex;
 	flex-wrap:wrap;
 	flex-direction:column;
-	justify-content:center;
-	align-items:center;
-}
-
-.teanvcont {
-	display:flex;
-	flex-wrap:wrap;
-	width:95%;
-	height:95%;
-	justify-content:center;
-	align-items:center;
-}
-
-.teamvcont h2 {
-	width:100%;
-	display:flex;
-	justify-content:center;
-	align-items:center;
-    color: white;
-    margin-top:1em;
-}
-
-.teampeople {
-	display:flex;
-	flex-wrap:wrap;
-	width:100%;
-	height:100%;
 	justify-content:space-around;
 	align-items:center;
+	width:100%;
 }
 
-.people {
+.contteam h2 {
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+	width:100%;
+
+}
+
+.peoplex4 {
 	display:flex;
 	flex-wrap:wrap;
+	justify-content:space-around;
+	align-items:center;
+	background:red;
+	width:100%;
+}
+
+.peoplex1 {
+	display:flex;
 	flex-direction:column;
 	justify-content:center;
 	align-items:center;
-    margin:5px 0 5px 0;
+	margin-bottom:20px;
 }
 
-.people h4,
-.people h5 {
-    color: white;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    margin:0;
-    padding:0;
+.peoplex1 h5,
+.peoplex1 h6 {
+	margin:0;
+	padding:0;
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-/**/
 
-.imgteamsection {
-    display: flex;
-    flex-direction:column;
-    flex:wrap;
-    width:100%;
-    height: 100%;
-}
-
-.teamsectiontitle {
-    width:100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
-
-.teamers {
-    display: flex;
-    flex-direction:column;
-    flex:wrap;
-    justify-content: center;
-    align-items: center;
-    width:100%;
-    padding:3px;
-}
-
-.imgteamsection h3,
-.teamers h4,
-.teamers h5 {
-    padding:0;
-    margin:0;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color:white;
-}
-
-.teamers img {
-    width:70px;
-    height:70px;
-}
-
-.conteamers {
-    display: flex;
-    flex:wrap;
-    flex-direction:row;
-    justify-content: center;
-    align-items: center;
-}
 
 /*PARTNERS*/
 #partnerscolcomm {
