space around borrar texto raro

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -568,7 +568,7 @@ body {
 .peoplex4 {
 	display:flex;
 	flex-wrap:wrap;
-	justify-content:space-around;
+	justify-content:space-around;
 	align-items:center;
 	background:red;
 	width:100%;
