--- a/_includes/team.html
+++ b/_includes/team.html
@@ -7,25 +7,25 @@
              <div class="peoplex4">
          
                  <div class="peoplex1">
-                 <img src="./img/portfolio/DAPPS.png">
+                 <img src="../img/portfolio/DAPPS.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="./img/portfolio/DAPPS.png">
+                 <img src="../img/portfolio/DAPPS.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="./img/portfolio/DAPPS.png">
+                 <img src="../img/portfolio/DAPPS.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="./img/portfolio/DAPPS.png">
+                 <img src="../img/portfolio/DAPPS.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
@@ -35,25 +35,25 @@
              <div class="peoplex4">
          
                  <div class="peoplex1">
-                 <img src="./img/portfolio/DAPPS.png">
+                 <img src="../img/portfolio/DAPPS.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="./img/portfolio/DAPPS.png">
+                 <img src="../img/portfolio/DAPPS.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="./img/portfolio/DAPPS.png">
+                 <img src="../img/portfolio/DAPPS.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="./img/portfolio/DAPPS.png">
+                 <img src="../img/portfolio/DAPPS.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
@@ -63,25 +63,25 @@
              <div class="peoplex4">
          
                  <div class="peoplex1">
-                 <img src="./img/portfolio/DAPPS.png">
+                 <img src="../img/portfolio/DAPPS.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="./img/portfolio/DAPPS.png">
+                 <img src="../img/portfolio/DAPPS.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="./img/portfolio/DAPPS.png">
+                 <img src="../img/portfolio/DAPPS.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="./img/portfolio/DAPPS.png">
+                 <img src="../img/portfolio/DAPPS.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
@@ -91,25 +91,25 @@
              <div class="peoplex4">
          
                  <div class="peoplex1">
-                 <img src="./img/portfolio/DAPPS.png">
+                 <img src="../img/portfolio/DAPPS.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="./img/portfolio/DAPPS.png">
+                 <img src="../img/portfolio/DAPPS.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="./img/portfolio/DAPPS.png">
+                 <img src="../img/portfolio/DAPPS.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="./img/portfolio/DAPPS.png">
+                 <img src="../img/portfolio/DAPPS.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
