--- a/_includes/teamv.html
+++ b/_includes/teamv.html
@@ -1,117 +1,123 @@
-<section class="teamv" id="team">
-
-    <div class="hiddenteamimg">
-        <div class="teamvcont">
-            <h2>OUR TEAM</h2>
-            <div class="teampeople">
-                <div class="people">
-                    <img src="../img/team/Moe.png">
-                    <h4>NOMBRE</h4>
-                    <H5>CARGO</H5>
-                </div>
-
-                <div class="people">
-                    <img src="../img/team/Moe.png">
-                    <h4>NOMBRE</h4>
-                    <H5>CARGO</H5>
-                </div>
-
-                <div class="people">
-                    <img src="../img/team/Moe.png">
-                    <h4>NOMBRE</h4>
-                    <H5>CARGO</H5>
-                </div>
-
-                <div class="people">
-                    <img src="../img/team/Moe.png">
-                    <h4>NOMBRE</h4>
-                    <H5>CARGO</H5>
-                </div>
-
-            </div>
-
-            <div class="teampeople">
-                <div class="people">
-                    <img src="../img/team/Moe.png">
-                    <h4>NOMBRE</h4>
-                    <H5>CARGO</H5>
-                </div>
-
-                <div class="people">
-                    <img src="../img/team/Moe.png">
-                    <h4>NOMBRE</h4>
-                    <H5>CARGO</H5>
-                </div>
-
-                <div class="people">
-                    <img src="../img/team/Moe.png">
-                    <h4>NOMBRE</h4>
-                    <H5>CARGO</H5>
-                </div>
-
-                <div class="people">
-                    <img src="../img/team/Moe.png">
-                    <h4>NOMBRE</h4>
-                    <H5>CARGO</H5>
-                </div>
-
-            </div>
-
-            <div class="teampeople">
-                <div class="people">
-                    <img src="../img/team/Moe.png">
-                    <h4>NOMBRE</h4>
-                    <H5>CARGO</H5>
-                </div>
-
-                <div class="people">
-                    <img src="../img/team/Moe.png">
-                    <h4>NOMBRE</h4>
-                    <H5>CARGO</H5>
-                </div>
-
-                <div class="people">
-                    <img src="../img/team/Moe.png">
-                    <h4>NOMBRE</h4>
-                    <H5>CARGO</H5>
-                </div>
-
-                <div class="people">
-                    <img src="../img/team/Moe.png">
-                    <h4>NOMBRE</h4>
-                    <H5>CARGO</H5>
-                </div>
-
-            </div>
-
-            <div class="teampeople">
-                <div class="people">
-                    <img src="../img/team/Moe.png">
-                    <h4>NOMBRE</h4>
-                    <H5>CARGO</H5>
-                </div>
-
-                <div class="people">
-                    <img src="../img/team/Moe.png">
-                    <h4>NOMBRE</h4>
-                    <H5>CARGO</H5>
-                </div>
-
-                <div class="people">
-                    <img src="../img/team/Moe.png">
-                    <h4>NOMBRE</h4>
-                    <H5>CARGO</H5>
-                </div>
-
-                <div class="people">
-                    <img src="../img/team/Moe.png">
-                    <h4>NOMBRE</h4>
-                    <H5>CARGO</H5>
-                </div>
-
-            </div>
-            
-
-        </div>
+<section id="team">
+    <div class="contteam">
+         <h2>OUR TEAM<h2>
+         
+         <div class="peoplegroup">
+ <!--GRUPO 1-->	
+             <div class="peoplex4">
+         
+                 <div class="peoplex1">
+                 <img src="../img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="../img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="../img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="../img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+             </div>
+ <!--GRUPO 2-->				
+             <div class="peoplex4">
+         
+                 <div class="peoplex1">
+                 <img src="../img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="../img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="../img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="../img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+             </div>
+ <!--GRUPO 3-->	
+             <div class="peoplex4">
+         
+                 <div class="peoplex1">
+                 <img src="../img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="../img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="../img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="../img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+             </div>
+ <!--GRUPO 4-->	
+             <div class="peoplex4">
+         
+                 <div class="peoplex1">
+                 <img src="../img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="../img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="../img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+                 <div class="peoplex1">
+                 <img src="../img/portfolio/DAPPS.png">
+                 <h5>NOMBRE</h5>
+                 <h6>CARGO</h6>		
+                 </div>
+                 
+             </div>
+         
+         </div>
+    
     </div>
-</section>
+ </section>
+ 
