--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -570,6 +570,7 @@ body {
 	justify-content:space-around;
 	align-items:center;
     background-image: url('../img/rayos.gif');
+    background-repeat: no-repeat;
 	width:100%;
 }
 
