--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -570,7 +570,9 @@ body {
 	justify-content:space-around;
 	align-items:center;
     background-image: url('../img/rayos.gif');
+    background-position: center; 
     background-repeat: no-repeat;
+    background-size: cover;
 	width:100%;
 }
 
