--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -599,7 +599,9 @@ body {
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-
+.peoplex1 {
+    width:80%;
+}
 
 /*PARTNERS*/
 #partnerscolcomm {
