--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -599,7 +599,7 @@ body {
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.peoplex1 {
+.peoplex1 img {
     width:80%;
 }
 
